--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "PyneScript"
+name = "Pyne_script_utilities"
 version = "1.0.0"
 authors = [
   { name="80sVectorz"},
