--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "Pyne_script_utilities"
-version = "1.0.0"
+name = "pyne_script_utilities"
+version = "1.0.1"
 authors = [
   { name="80sVectorz"},
 ]
