--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,15 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["pyne_script*"]
+namespaces = false
 
 [project]
 name = "pyne_script_utilities"
-version = "1.0.1"
+version = "1.0.2"
 authors = [
   { name="80sVectorz"},
 ]
