--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Lint/format with Black
-      - uses: psf/black@stable
+        uses: psf/black@stable
         with:
           options: "--check --verbose"
           src: "./src"
