--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest
+          python -m pip install pytest build
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           python -m build ; python -m pip install ./dist/*tar.gz
       - name: Test with pytest
